--- a/KM.SysControlAdmin.WebApp/Views/Shared/_Layout.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/Shared/_Layout.cshtml
@@ -44,7 +44,12 @@
             <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
                 <div class="sb-sidenav-menu">
                     <div class="nav">
-                        
+                        <!-- Seccion Seguridad-->
+                        <div class="sb-sidenav-menu-heading">Seguridad</div>
+                        <a class="nav-link" asp-area="" asp-controller="Role" asp-action="Index">
+                            <div class="sb-nav-link-icon"><i class="fas fa-user-shield"></i></div>
+                            Roles
+                        </a>
                     </div>
                 </div>
                 <div class="sb-sidenav-footer" style="text-align:center">
