--- a/KM.SysControlAdmin.WebApp/Views/Home/Index.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/Home/Index.cshtml
@@ -1,3 +1,13 @@
 ﻿@{
     ViewData["Title"] = "Inicio";
 }
+
+<link href="/css/Home/DesignHome.css" rel="stylesheet" />
+
+<div class="bienvenida">
+    <div>
+        <img class="elimLogo" src="/assets/img/logos/Logo Kerigma Music.png" alt="Alternate Text" width="200" />
+        <h3 class="font-weight-bold">¡Bienvenido De Vuelta!</h3>
+        <h6 class="font-weight-normal mb-0">Sistema De Control Administrativo - Kerigma Music / IFAD</h6>
+    </div>
+</div>
