--- a/KM.SysControlAdmin.WebApp/Views/Shared/_Layout.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/Shared/_Layout.cshtml
@@ -56,6 +56,10 @@
                             <div class="sb-nav-link-icon"><i class="fas fa-user-shield"></i></div>
                             Roles
                         </a>
+                        <a class="nav-link" asp-area="" asp-controller="User" asp-action="Index">
+                            <div class="sb-nav-link-icon"><i class="fas fa-users"></i></div>
+                            Usuarios
+                        </a>
                     </div>
                 </div>
                 <div class="sb-sidenav-footer" style="text-align:center">
