--- a/KM.SysControlAdmin.WebApp/Views/Shared/_Layout.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@using System.Security.Claims
+
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="utf-8" />
@@ -15,80 +17,155 @@
     <script src="~/js/fontawesome.js"></script>
 </head>
 <body>
-    
-    <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
-        <!-- Navbar Brand-->
-        <a class="navbar-brand ps-1" style="color:white" asp-area="" asp-controller="Home" asp-action="Index"><img src="/assets/img/logos/Icon Kerigma Music.png" width="20" style="margin-right:3px; margin-left:25px; margin-bottom:3px" alt="Logo" /> Kerigma Music</a>
-        <!-- Sidebar Toggle-->
-        <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
-        <!-- Navbar Search-->
-        <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
-            <div class="input-group" hidden>
-                <input class="form-control" type="text" placeholder="Buscar..." aria-label="Search for..." aria-describedby="btnNavbarSearch" />
-                <button class="btn btn-primary" id="btnNavbarSearch" type="button"><i class="fas fa-search"></i></button>
-            </div>
-        </form>
-        <!-- Navbar-->
-        <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
-                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" id="logoutLink" href="#!">Cerrar Sesión</a></li>
-                </ul>
-            </li>
-        </ul>
-    </nav>
 
-    <div id="layoutSidenav">
-        <div id="layoutSidenav_nav">
-            <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
-                <div class="sb-sidenav-menu">
-                    <div class="nav">
-                        <!-- Seccion Principal-->
-                        <div class="sb-sidenav-menu-heading">Principal</div>
-                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">
-                            <div class="sb-nav-link-icon"><i class="fas fa-home"></i></div>
-                            Inicio
-                        </a>
-                        <!-- Seccion Seguridad-->
-                        <div class="sb-sidenav-menu-heading">Seguridad</div>
-                        <a class="nav-link" asp-area="" asp-controller="Role" asp-action="Index">
-                            <div class="sb-nav-link-icon"><i class="fas fa-user-shield"></i></div>
-                            Roles
-                        </a>
-                        <a class="nav-link" asp-area="" asp-controller="User" asp-action="Index">
-                            <div class="sb-nav-link-icon"><i class="fas fa-users"></i></div>
-                            Usuarios
-                        </a>
-                    </div>
+    @if (User.Identity.IsAuthenticated)
+    {
+        <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+            <!-- Navbar Brand-->
+            <a class="navbar-brand ps-1" style="color:white" asp-area="" asp-controller="Home" asp-action="Index"><img src="/assets/img/logos/Icon Kerigma Music.png" width="20" style="margin-right:3px; margin-left:25px; margin-bottom:3px" alt="Logo" /> Kerigma Music</a>
+            <!-- Sidebar Toggle-->
+            <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
+            <!-- Navbar Search-->
+            <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
+                <div class="input-group" hidden>
+                    <input class="form-control" type="text" placeholder="Buscar..." aria-label="Search for..." aria-describedby="btnNavbarSearch" />
+                    <button class="btn btn-primary" id="btnNavbarSearch" type="button"><i class="fas fa-search"></i></button>
                 </div>
-                <div class="sb-sidenav-footer" style="text-align:center">
-                    <div class="small"><strong>Nivel de Acceso:</strong></div>
-                    Proximamente...
-                </div>
-            </nav>
-        </div>
-        <div id="layoutSidenav_content">
-            <main>
-                <div class="container-fluid px-4">
-                    <div>
-                        <main role="main">
-                            @RenderBody()
-                        </main>
-                    </div>
-                </div>
-            </main>
-            <footer class="py-4 bg-light mt-auto">
-                <div class="container-fluid px-4">
-                    <div class="d-flex align-items-center justify-content-between small">
-                        <div class="text-muted">
-                            &copy;Copyright <span id="currentYear"></span>. Desarrollado Por Hector Garcia
+            </form>
+            <!-- Navbar-->
+            <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
+                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" id="logoutLink" href="#!">Cerrar Sesión</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+
+        <div id="layoutSidenav">
+            <div id="layoutSidenav_nav">
+                <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
+                    <div class="sb-sidenav-menu">
+                        <div class="nav">
+                            @if (User.IsInRole("Desarrollador"))
+                            {
+                                <!-- Seccion Principal-->
+                                <div class="sb-sidenav-menu-heading">Principal</div>
+                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-home"></i></div>
+                                    Inicio
+                                </a>
+                                <!-- Seccion Seguridad-->
+                                <div class="sb-sidenav-menu-heading">Seguridad</div>
+                                <a class="nav-link" asp-area="" asp-controller="Role" asp-action="Index">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-user-shield"></i></div>
+                                    Roles
+                                </a>
+                                <a class="nav-link" asp-area="" asp-controller="User" asp-action="Index">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-users"></i></div>
+                                    Usuarios
+                                </a>
+                            }
+                            else if (User.IsInRole("Administrador"))
+                            {
+                                <!-- Seccion Principal-->
+                                <div class="sb-sidenav-menu-heading">Principal</div>
+                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-home"></i></div>
+                                    Inicio
+                                </a>
+                                <!-- Seccion Seguridad-->
+                                <div class="sb-sidenav-menu-heading">Seguridad</div>
+                                <a class="nav-link" asp-area="" asp-controller="User" asp-action="Index">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-users"></i></div>
+                                    Usuarios
+                                </a>
+                            }
+                            else if (User.IsInRole("Secretario/a"))
+                            {
+                                <!-- Seccion Principal-->
+                                <div class="sb-sidenav-menu-heading">Principal</div>
+                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-home"></i></div>
+                                    Inicio
+                                </a>
+                                <!-- Seccion Seguridad-->
+                                <div class="sb-sidenav-menu-heading">Seguridad</div>
+                                <a class="nav-link" asp-area="" asp-controller="User" asp-action="Index">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-users"></i></div>
+                                    Usuarios
+                                </a>
+                            }
+                            else if (User.IsInRole("Instructor"))
+                            {
+                                <!-- Seccion Principal-->
+                                <div class="sb-sidenav-menu-heading">Principal</div>
+                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-home"></i></div>
+                                    Inicio
+                                </a>
+                                <!-- Seccion Seguridad-->
+                                <div class="sb-sidenav-menu-heading">Seguridad</div>
+                            }
+                            else if (User.IsInRole("Alumno/a"))
+                            {
+                                <!-- Seccion Principal-->
+                                <div class="sb-sidenav-menu-heading">Principal</div>
+                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-home"></i></div>
+                                    Inicio
+                                </a>
+                                <!-- Seccion Seguridad-->
+                                <div class="sb-sidenav-menu-heading">Seguridad</div>
+                            }
+                            else if (User.IsInRole("Invitado"))
+                            {
+                                <!-- Seccion Principal-->
+                                <div class="sb-sidenav-menu-heading">Principal</div>
+                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-home"></i></div>
+                                    Inicio
+                                </a>
+                                <!-- Seccion Seguridad-->
+                                <div class="sb-sidenav-menu-heading">Seguridad</div>
+                            }
                         </div>
                     </div>
-                </div>
-            </footer>
+                    <div class="sb-sidenav-footer" style="text-align:center">
+                        <div class="small"><strong>Nivel de Acceso:</strong></div>
+                        @User.FindFirst(ClaimTypes.Role)?.Value
+                    </div>
+                </nav>
+            </div>
+            <div id="layoutSidenav_content">
+                <main>
+                    <div class="container-fluid px-4">
+                        <div>
+                            <main role="main">
+                                @RenderBody()
+                            </main>
+                        </div>
+                    </div>
+                </main>
+                <footer class="py-4 bg-light mt-auto">
+                    <div class="container-fluid px-4">
+                        <div class="d-flex align-items-center justify-content-between small">
+                            <div class="text-muted">
+                                &copy;Copyright <span id="currentYear"></span>. Desarrollado Por Hector Garcia
+                            </div>
+                        </div>
+                    </div>
+                </footer>
+            </div>
         </div>
-    </div>
+    }
+    else
+    {
+        <main role="main">
+            @RenderBody()
+        </main>
+    }
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
