--- a/KM.SysControlAdmin.WebApp/Views/Shared/_Layout.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/Shared/_Layout.cshtml
@@ -66,6 +66,16 @@
                                     <div class="sb-nav-link-icon"><i class="fas fa-users"></i></div>
                                     Usuarios
                                 </a>
+                                <a class="nav-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-key"></i></div>
+                                    Cambiar Contraseña
+                                    <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                                </a>
+                                <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
+                                    <nav class="sb-sidenav-menu-nested nav">
+                                        <a class="nav-link" asp-area="" asp-controller="User" asp-action="ChangePassword">Mi Usuario</a>
+                                    </nav>
+                                </div>
                             }
                             else if (User.IsInRole("Administrador"))
                             {
@@ -81,6 +91,16 @@
                                     <div class="sb-nav-link-icon"><i class="fas fa-users"></i></div>
                                     Usuarios
                                 </a>
+                                <a class="nav-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-key"></i></div>
+                                    Cambiar Contraseña
+                                    <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                                </a>
+                                <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
+                                    <nav class="sb-sidenav-menu-nested nav">
+                                        <a class="nav-link" asp-area="" asp-controller="User" asp-action="ChangePassword">Mi Usuario</a>
+                                    </nav>
+                                </div>
                             }
                             else if (User.IsInRole("Secretario/a"))
                             {
@@ -96,6 +116,16 @@
                                     <div class="sb-nav-link-icon"><i class="fas fa-users"></i></div>
                                     Usuarios
                                 </a>
+                                <a class="nav-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-key"></i></div>
+                                    Cambiar Contraseña
+                                    <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                                </a>
+                                <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
+                                    <nav class="sb-sidenav-menu-nested nav">
+                                        <a class="nav-link" asp-area="" asp-controller="User" asp-action="ChangePassword">Mi Usuario</a>
+                                    </nav>
+                                </div>
                             }
                             else if (User.IsInRole("Instructor"))
                             {
@@ -107,6 +137,10 @@
                                 </a>
                                 <!-- Seccion Seguridad-->
                                 <div class="sb-sidenav-menu-heading">Seguridad</div>
+                                <a class="nav-link" asp-area="" asp-controller="User" asp-action="ChangePassword">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-key"></i></div>
+                                    Cambiar Mi Contraseña
+                                </a>
                             }
                             else if (User.IsInRole("Alumno/a"))
                             {
@@ -118,6 +152,10 @@
                                 </a>
                                 <!-- Seccion Seguridad-->
                                 <div class="sb-sidenav-menu-heading">Seguridad</div>
+                                <a class="nav-link" asp-area="" asp-controller="User" asp-action="ChangePassword">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-key"></i></div>
+                                    Cambiar Mi Contraseña
+                                </a>
                             }
                             else if (User.IsInRole("Invitado"))
                             {
@@ -129,6 +167,10 @@
                                 </a>
                                 <!-- Seccion Seguridad-->
                                 <div class="sb-sidenav-menu-heading">Seguridad</div>
+                                <a class="nav-link" asp-area="" asp-controller="User" asp-action="ChangePassword">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-key"></i></div>
+                                    Cambiar Mi Contraseña
+                                </a>
                             }
                         </div>
                     </div>
