--- a/KM.SysControlAdmin.WebApp/Views/Shared/_Layout.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/Shared/_Layout.cshtml
@@ -74,6 +74,7 @@
                                 <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                     <nav class="sb-sidenav-menu-nested nav">
                                         <a class="nav-link" asp-area="" asp-controller="User" asp-action="ChangePassword">Mi Usuario</a>
+                                        <a class="nav-link" asp-area="" asp-controller="Support" asp-action="Index">Usuarios Externos</a>
                                     </nav>
                                 </div>
                             }
@@ -99,6 +100,7 @@
                                 <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                     <nav class="sb-sidenav-menu-nested nav">
                                         <a class="nav-link" asp-area="" asp-controller="User" asp-action="ChangePassword">Mi Usuario</a>
+                                        <a class="nav-link" asp-area="" asp-controller="Support" asp-action="Index">Usuarios Externos</a>
                                     </nav>
                                 </div>
                             }
@@ -124,6 +126,7 @@
                                 <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                     <nav class="sb-sidenav-menu-nested nav">
                                         <a class="nav-link" asp-area="" asp-controller="User" asp-action="ChangePassword">Mi Usuario</a>
+                                        <a class="nav-link" asp-area="" asp-controller="Support" asp-action="Index">Usuarios Externos</a>
                                     </nav>
                                 </div>
                             }
