NAVEGABILIDAD ENTRE _LAYOUT E INFORMATION DEL USUARIO LOGIADO

--- a/KM.SysControlAdmin.WebApp/Views/Shared/_Layout.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/Shared/_Layout.cshtml
@@ -77,6 +77,18 @@
                                         <a class="nav-link" asp-area="" asp-controller="Support" asp-action="Index">Usuarios Externos</a>
                                     </nav>
                                 </div>
+                                <!-- Seccion Mi Información-->
+                                <div class="sb-sidenav-menu-heading">Información</div>
+                                <a class="nav-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapseInfo" aria-expanded="false" aria-controls="collapseInfo">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-info-circle"></i></div>
+                                    Mi Información
+                                    <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                                </a>
+                                <div class="collapse" id="collapseInfo" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
+                                    <nav class="sb-sidenav-menu-nested nav">
+                                        <a class="nav-link" asp-area="" asp-controller="User" asp-action="Information">Mi Perfil</a>
+                                    </nav>
+                                </div>
                             }
                             else if (User.IsInRole("Administrador"))
                             {
@@ -101,6 +113,17 @@
                                     <nav class="sb-sidenav-menu-nested nav">
                                         <a class="nav-link" asp-area="" asp-controller="User" asp-action="ChangePassword">Mi Usuario</a>
                                         <a class="nav-link" asp-area="" asp-controller="Support" asp-action="Index">Usuarios Externos</a>
+                                    </nav>
+                                </div>
+                                <!-- Seccion Mi Información-->
+                                <a class="nav-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapseInfo" aria-expanded="false" aria-controls="collapseInfo">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-info-circle"></i></div>
+                                    Mi Información
+                                    <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                                </a>
+                                <div class="collapse" id="collapseInfo" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
+                                    <nav class="sb-sidenav-menu-nested nav">
+                                        <a class="nav-link" asp-area="" asp-controller="User" asp-action="Information">Mi Perfil</a>
                                     </nav>
                                 </div>
                             }
@@ -129,6 +152,17 @@
                                         <a class="nav-link" asp-area="" asp-controller="Support" asp-action="Index">Usuarios Externos</a>
                                     </nav>
                                 </div>
+                                <!-- Seccion Mi Información-->
+                                <a class="nav-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapseInfo" aria-expanded="false" aria-controls="collapseInfo">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-info-circle"></i></div>
+                                    Mi Información
+                                    <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                                </a>
+                                <div class="collapse" id="collapseInfo" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
+                                    <nav class="sb-sidenav-menu-nested nav">
+                                        <a class="nav-link" asp-area="" asp-controller="User" asp-action="Information">Mi Perfil</a>
+                                    </nav>
+                                </div>
                             }
                             else if (User.IsInRole("Instructor"))
                             {
@@ -144,6 +178,17 @@
                                     <div class="sb-nav-link-icon"><i class="fas fa-key"></i></div>
                                     Cambiar Mi Contraseña
                                 </a>
+                                <!-- Seccion Mi Información-->
+                                <a class="nav-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapseInfo" aria-expanded="false" aria-controls="collapseInfo">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-info-circle"></i></div>
+                                    Mi Información
+                                    <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                                </a>
+                                <div class="collapse" id="collapseInfo" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
+                                    <nav class="sb-sidenav-menu-nested nav">
+                                        <a class="nav-link" asp-area="" asp-controller="User" asp-action="Information">Mi Perfil</a>
+                                    </nav>
+                                </div>
                             }
                             else if (User.IsInRole("Alumno/a"))
                             {
@@ -159,6 +204,17 @@
                                     <div class="sb-nav-link-icon"><i class="fas fa-key"></i></div>
                                     Cambiar Mi Contraseña
                                 </a>
+                                <!-- Seccion Mi Información-->
+                                <a class="nav-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapseInfo" aria-expanded="false" aria-controls="collapseInfo">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-info-circle"></i></div>
+                                    Mi Información
+                                    <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                                </a>
+                                <div class="collapse" id="collapseInfo" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
+                                    <nav class="sb-sidenav-menu-nested nav">
+                                        <a class="nav-link" asp-area="" asp-controller="User" asp-action="Information">Mi Perfil</a>
+                                    </nav>
+                                </div>
                             }
                             else if (User.IsInRole("Invitado"))
                             {
@@ -174,6 +230,17 @@
                                     <div class="sb-nav-link-icon"><i class="fas fa-key"></i></div>
                                     Cambiar Mi Contraseña
                                 </a>
+                                <!-- Seccion Mi Información-->
+                                <a class="nav-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapseInfo" aria-expanded="false" aria-controls="collapseInfo">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-info-circle"></i></div>
+                                    Mi Información
+                                    <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                                </a>
+                                <div class="collapse" id="collapseInfo" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
+                                    <nav class="sb-sidenav-menu-nested nav">
+                                        <a class="nav-link" asp-area="" asp-controller="User" asp-action="Information">Mi Perfil</a>
+                                    </nav>
+                                </div>
                             }
                         </div>
                     </div>
