--- a/KM.SysControlAdmin.WebApp/Views/Shared/_Layout.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/Shared/_Layout.cshtml
@@ -116,6 +116,7 @@
                                     </nav>
                                 </div>
                                 <!-- Seccion Mi Información-->
+                                <div class="sb-sidenav-menu-heading">Información</div>
                                 <a class="nav-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapseInfo" aria-expanded="false" aria-controls="collapseInfo">
                                     <div class="sb-nav-link-icon"><i class="fas fa-info-circle"></i></div>
                                     Mi Información
@@ -153,6 +154,7 @@
                                     </nav>
                                 </div>
                                 <!-- Seccion Mi Información-->
+                                <div class="sb-sidenav-menu-heading">Información</div>
                                 <a class="nav-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapseInfo" aria-expanded="false" aria-controls="collapseInfo">
                                     <div class="sb-nav-link-icon"><i class="fas fa-info-circle"></i></div>
                                     Mi Información
@@ -179,6 +181,7 @@
                                     Cambiar Mi Contraseña
                                 </a>
                                 <!-- Seccion Mi Información-->
+                                <div class="sb-sidenav-menu-heading">Información</div>
                                 <a class="nav-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapseInfo" aria-expanded="false" aria-controls="collapseInfo">
                                     <div class="sb-nav-link-icon"><i class="fas fa-info-circle"></i></div>
                                     Mi Información
@@ -205,6 +208,7 @@
                                     Cambiar Mi Contraseña
                                 </a>
                                 <!-- Seccion Mi Información-->
+                                <div class="sb-sidenav-menu-heading">Información</div>
                                 <a class="nav-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapseInfo" aria-expanded="false" aria-controls="collapseInfo">
                                     <div class="sb-nav-link-icon"><i class="fas fa-info-circle"></i></div>
                                     Mi Información
@@ -231,6 +235,7 @@
                                     Cambiar Mi Contraseña
                                 </a>
                                 <!-- Seccion Mi Información-->
+                                <div class="sb-sidenav-menu-heading">Información</div>
                                 <a class="nav-link collapsed" data-bs-toggle="collapse" data-bs-target="#collapseInfo" aria-expanded="false" aria-controls="collapseInfo">
                                     <div class="sb-nav-link-icon"><i class="fas fa-info-circle"></i></div>
                                     Mi Información
