NAVEGABILIDAD ENTRE _LAYOUT Y UPDATEPICTUREUSER

--- a/KM.SysControlAdmin.WebApp/Views/Shared/_Layout.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/Shared/_Layout.cshtml
@@ -87,6 +87,7 @@
                                 <div class="collapse" id="collapseInfo" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                     <nav class="sb-sidenav-menu-nested nav">
                                         <a class="nav-link" asp-area="" asp-controller="User" asp-action="Information">Mi Perfil</a>
+                                        <a class="nav-link" asp-area="" asp-controller="User" asp-action="UpdatePictureUser">Actualizar Fotografia</a>
                                     </nav>
                                 </div>
                             }
@@ -125,6 +126,7 @@
                                 <div class="collapse" id="collapseInfo" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                     <nav class="sb-sidenav-menu-nested nav">
                                         <a class="nav-link" asp-area="" asp-controller="User" asp-action="Information">Mi Perfil</a>
+                                        <a class="nav-link" asp-area="" asp-controller="User" asp-action="UpdatePictureUser">Actualizar Fotografia</a>
                                     </nav>
                                 </div>
                             }
@@ -163,6 +165,7 @@
                                 <div class="collapse" id="collapseInfo" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                     <nav class="sb-sidenav-menu-nested nav">
                                         <a class="nav-link" asp-area="" asp-controller="User" asp-action="Information">Mi Perfil</a>
+                                        <a class="nav-link" asp-area="" asp-controller="User" asp-action="UpdatePictureUser">Actualizar Fotografia</a>
                                     </nav>
                                 </div>
                             }
@@ -190,6 +193,7 @@
                                 <div class="collapse" id="collapseInfo" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                     <nav class="sb-sidenav-menu-nested nav">
                                         <a class="nav-link" asp-area="" asp-controller="User" asp-action="Information">Mi Perfil</a>
+                                        <a class="nav-link" asp-area="" asp-controller="User" asp-action="UpdatePictureUser">Actualizar Fotografia</a>
                                     </nav>
                                 </div>
                             }
@@ -217,6 +221,7 @@
                                 <div class="collapse" id="collapseInfo" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                     <nav class="sb-sidenav-menu-nested nav">
                                         <a class="nav-link" asp-area="" asp-controller="User" asp-action="Information">Mi Perfil</a>
+                                        <a class="nav-link" asp-area="" asp-controller="User" asp-action="UpdatePictureUser">Actualizar Fotografia</a>
                                     </nav>
                                 </div>
                             }
@@ -244,6 +249,7 @@
                                 <div class="collapse" id="collapseInfo" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                     <nav class="sb-sidenav-menu-nested nav">
                                         <a class="nav-link" asp-area="" asp-controller="User" asp-action="Information">Mi Perfil</a>
+                                        <a class="nav-link" asp-area="" asp-controller="User" asp-action="UpdatePictureUser">Actualizar Fotografia</a>
                                     </nav>
                                 </div>
                             }
