CREACION DE VISTAS  PASSWORDSENTUSER Y FORGOTPASSWORD ADICIONAL MODIFICACION DE VISTA LOGIN

--- a/KM.SysControlAdmin.WebApp/Views/User/Login.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/User/Login.cshtml
@@ -27,7 +27,7 @@
                     <input class="btn btn-primary w-100 py-2 fs-5 mb-3 rounded-2" type="submit" value="Iniciar Sesión" />
                 </div>
                 <div class="text-center mt-2">
-                    <a href="#" class="text-decoration-none">¿Olvidaste Tu Contraseña?</a>
+                    <a asp-action="ForgotPassword" class="text-decoration-none">¿Olvidaste Tu Contraseña?</a>
                 </div>
                 <div class="text-center text-danger mt-3">
                     <span>@ViewBag.Error</span>
