--- a/KM.SysControlAdmin.WebApp/Views/Shared/_Layout.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/Shared/_Layout.cshtml
@@ -56,6 +56,12 @@
                                     <div class="sb-nav-link-icon"><i class="fas fa-home"></i></div>
                                     Inicio
                                 </a>
+                                <!-- Seccion Infraestructura-->
+                                <div class="sb-sidenav-menu-heading">Infraestructura Interna</div>
+                                <a class="nav-link" asp-area="" asp-controller="Schedule" asp-action="Index">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-clock"></i></div>
+                                    Horarios
+                                </a>
                                 <!-- Seccion Seguridad-->
                                 <div class="sb-sidenav-menu-heading">Seguridad</div>
                                 <a class="nav-link" asp-area="" asp-controller="Role" asp-action="Index">
@@ -99,6 +105,12 @@
                                     <div class="sb-nav-link-icon"><i class="fas fa-home"></i></div>
                                     Inicio
                                 </a>
+                                <!-- Seccion Infraestructura-->
+                                <div class="sb-sidenav-menu-heading">Infraestructura Interna</div>
+                                <a class="nav-link" asp-area="" asp-controller="Schedule" asp-action="Index">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-clock"></i></div>
+                                    Horarios
+                                </a>
                                 <!-- Seccion Seguridad-->
                                 <div class="sb-sidenav-menu-heading">Seguridad</div>
                                 <a class="nav-link" asp-area="" asp-controller="User" asp-action="Index">
@@ -137,6 +149,12 @@
                                 <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">
                                     <div class="sb-nav-link-icon"><i class="fas fa-home"></i></div>
                                     Inicio
+                                </a>
+                                <!-- Seccion Infraestructura-->
+                                <div class="sb-sidenav-menu-heading">Infraestructura Interna</div>
+                                <a class="nav-link" asp-area="" asp-controller="Schedule" asp-action="Index">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-clock"></i></div>
+                                    Horarios
                                 </a>
                                 <!-- Seccion Seguridad-->
                                 <div class="sb-sidenav-menu-heading">Seguridad</div>
