--- a/KM.SysControlAdmin.WebApp/Views/Trainer/CreateTrainer.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/Trainer/CreateTrainer.cshtml
@@ -48,19 +48,19 @@
                     <label asp-for="Gender" class="control-label"></label>
                     <select name="Gender" class="form-select" required>
                         <option selected value="">Seleccionar</option>
-                        <option value="Masculino">Masculino</option>
-                        <option value="Femenino">Femenino</option>
+                        <option value="MASCULINOO">MASCULINO</option>
+                        <option value="FEMENINO">FEMENINO</option>
                     </select>
                     <span asp-validation-for="Gender" class="text-danger"></span>
                 </div>
                 <div class="form-group">
                     <label asp-for="CivilStatus" class="control-label"></label>
                     <select name="CivilStatus" class="form-select" required>
-                        <option selected value="">Seleccionar</option>
-                        <option value="Soltero/a">Soltero/a</option>
-                        <option value="Casado/a">Casado/a</option>
-                        <option value="Divorciado/a">Divorciado/a</option>
-                        <option value="Viudo/a">Viudo/a</option>
+                        <option selected value="">SELECCIONAR</option>
+                        <option value="SOLTERO/A">SOLTERO/A</option>
+                        <option value="CASADO/A">CASADO/A</option>
+                        <option value="DIVORCIADO/A">Divorciado/a</option>
+                        <option value="VIUDO/A">VIUDO/A</option>
                     </select>
                     <span asp-validation-for="CivilStatus" class="text-danger"></span>
                 </div>
@@ -84,9 +84,9 @@
                 <div class="form-group">
                     <label asp-for="Status" class="control-label"></label>
                     <select name="Status" class="form-select" required>
-                        <option value="">Seleccionar</option>
-                        <option value="1" selected>Activo</option>
-                        <option value="2">Inactivo</option>
+                        <option value="">SELECCIONAR</option>
+                        <option value="1" selected>ACTIVO</option>
+                        <option value="2">INACTIVO</option>
                     </select>
                     <span asp-validation-for="Status" class="text-danger"></span>
                 </div>
