--- a/KM.SysControlAdmin.WebApp/Views/Trainer/Index.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/Trainer/Index.cshtml
@@ -27,7 +27,7 @@
                 </div>
                 <div class="form-group">
                     <label for="Name">Codigo</label>
-                    <input type="text" class="form-control" name="Code" placeholder="Ejemplo: hlgl525" />
+                    <input type="text" class="form-control" name="Code" placeholder="Ejemplo: hlgl525" maxlength="7"/>
                 </div>
             </div>
             <br />
