--- a/KM.SysControlAdmin.WebApp/Views/Trainer/CreateTrainer.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/Trainer/CreateTrainer.cshtml
@@ -48,7 +48,7 @@
                     <label asp-for="Gender" class="control-label"></label>
                     <select name="Gender" class="form-select" required>
                         <option selected value="">Seleccionar</option>
-                        <option value="MASCULINOO">MASCULINO</option>
+                        <option value="MASCULINO">MASCULINO</option>
                         <option value="FEMENINO">FEMENINO</option>
                     </select>
                     <span asp-validation-for="Gender" class="text-danger"></span>
