--- a/KM.SysControlAdmin.WebApp/Views/Shared/_Layout.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/Shared/_Layout.cshtml
@@ -62,6 +62,10 @@
                                     <div class="sb-nav-link-icon"><i class="fas fa-clock"></i></div>
                                     Horarios
                                 </a>
+                                <a class="nav-link" asp-area="" asp-controller="Trainer" asp-action="Index">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-user-tie"></i></div>
+                                    Instructores
+                                </a>
                                 <!-- Seccion Seguridad-->
                                 <div class="sb-sidenav-menu-heading">Seguridad</div>
                                 <a class="nav-link" asp-area="" asp-controller="Role" asp-action="Index">
@@ -111,6 +115,10 @@
                                     <div class="sb-nav-link-icon"><i class="fas fa-clock"></i></div>
                                     Horarios
                                 </a>
+                                <a class="nav-link" asp-area="" asp-controller="Trainer" asp-action="Index">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-user-tie"></i></div>
+                                    Instructores
+                                </a>
                                 <!-- Seccion Seguridad-->
                                 <div class="sb-sidenav-menu-heading">Seguridad</div>
                                 <a class="nav-link" asp-area="" asp-controller="User" asp-action="Index">
@@ -155,6 +163,10 @@
                                 <a class="nav-link" asp-area="" asp-controller="Schedule" asp-action="Index">
                                     <div class="sb-nav-link-icon"><i class="fas fa-clock"></i></div>
                                     Horarios
+                                </a>
+                                <a class="nav-link" asp-area="" asp-controller="Trainer" asp-action="Index">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-user-tie"></i></div>
+                                    Instructores
                                 </a>
                                 <!-- Seccion Seguridad-->
                                 <div class="sb-sidenav-menu-heading">Seguridad</div>
