NAVEGABILIDAD ENTRE _LAYOUT Y COURSE INDEX

--- a/KM.SysControlAdmin.WebApp/Views/Shared/_Layout.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/Shared/_Layout.cshtml
@@ -66,6 +66,10 @@
                                     <div class="sb-nav-link-icon"><i class="fas fa-user-tie"></i></div>
                                     Instructores
                                 </a>
+                                <a class="nav-link" asp-area="" asp-controller="Course" asp-action="Index">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-chalkboard-teacher"></i></div>
+                                    Cursos
+                                </a>
                                 <!-- Seccion Seguridad-->
                                 <div class="sb-sidenav-menu-heading">Seguridad</div>
                                 <a class="nav-link" asp-area="" asp-controller="Role" asp-action="Index">
@@ -119,6 +123,10 @@
                                     <div class="sb-nav-link-icon"><i class="fas fa-user-tie"></i></div>
                                     Instructores
                                 </a>
+                                <a class="nav-link" asp-area="" asp-controller="Course" asp-action="Index">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-chalkboard-teacher"></i></div>
+                                    Cursos
+                                </a>
                                 <!-- Seccion Seguridad-->
                                 <div class="sb-sidenav-menu-heading">Seguridad</div>
                                 <a class="nav-link" asp-area="" asp-controller="User" asp-action="Index">
@@ -167,6 +175,10 @@
                                 <a class="nav-link" asp-area="" asp-controller="Trainer" asp-action="Index">
                                     <div class="sb-nav-link-icon"><i class="fas fa-user-tie"></i></div>
                                     Instructores
+                                </a>
+                                <a class="nav-link" asp-area="" asp-controller="Course" asp-action="Index">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-chalkboard-teacher"></i></div>
+                                    Cursos
                                 </a>
                                 <!-- Seccion Seguridad-->
                                 <div class="sb-sidenav-menu-heading">Seguridad</div>
