--- a/KM.SysControlAdmin.WebApp/Views/Student/Index.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/Student/Index.cshtml
@@ -7,7 +7,7 @@
 <link href="/css/Student/DesignCreateAndEdit.css" rel="stylesheet" />
 
 <br />
-<h>Mantenimiento De Alumnos/as</h>
+<h3>Mantenimiento De Alumnos/as</h3>
 <hr />
 <div class="row">
     <div class="col-md-12">
