MODIFICACIONES EN VISTA GENERAR FICHA TRAINER

--- a/KM.SysControlAdmin.WebApp/Views/Trainer/GeneratePDFfileTrainer.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/Trainer/GeneratePDFfileTrainer.cshtml
@@ -118,5 +118,9 @@
     <!-- Pie de pagina-->
     <footer class="footer">Ficha Instructor Academia Kerigma Music <span id="currentYear"></span> © | Generado en Sistema de Control Administrativo Kerigma Music.</footer>
 
+    <script>
+        // Obtiene el año actual y lo inserta en el elemento con id "currentYear"
+        document.getElementById("currentYear").textContent = new Date().getFullYear();
+    </script>
 </body>
 </html>
