NAVEGABILIDAD ENTRE _LAYOUT Y STUDENT INDEX

--- a/KM.SysControlAdmin.WebApp/Views/Shared/_Layout.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/Shared/_Layout.cshtml
@@ -70,6 +70,10 @@
                                     <div class="sb-nav-link-icon"><i class="fas fa-chalkboard-teacher"></i></div>
                                     Cursos
                                 </a>
+                                <a class="nav-link" asp-area="" asp-controller="Student" asp-action="Index">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-graduation-cap"></i></div>
+                                    Alumnos/as
+                                </a>
                                 <!-- Seccion Seguridad-->
                                 <div class="sb-sidenav-menu-heading">Seguridad</div>
                                 <a class="nav-link" asp-area="" asp-controller="Role" asp-action="Index">
@@ -127,6 +131,10 @@
                                     <div class="sb-nav-link-icon"><i class="fas fa-chalkboard-teacher"></i></div>
                                     Cursos
                                 </a>
+                                <a class="nav-link" asp-area="" asp-controller="Student" asp-action="Index">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-graduation-cap"></i></div>
+                                    Alumnos/as
+                                </a>
                                 <!-- Seccion Seguridad-->
                                 <div class="sb-sidenav-menu-heading">Seguridad</div>
                                 <a class="nav-link" asp-area="" asp-controller="User" asp-action="Index">
@@ -179,6 +187,10 @@
                                 <a class="nav-link" asp-area="" asp-controller="Course" asp-action="Index">
                                     <div class="sb-nav-link-icon"><i class="fas fa-chalkboard-teacher"></i></div>
                                     Cursos
+                                </a>
+                                <a class="nav-link" asp-area="" asp-controller="Student" asp-action="Index">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-graduation-cap"></i></div>
+                                    Alumnos/as
                                 </a>
                                 <!-- Seccion Seguridad-->
                                 <div class="sb-sidenav-menu-heading">Seguridad</div>
