--- a/KM.SysControlAdmin.WebApp/Views/Shared/_Layout.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/Shared/_Layout.cshtml
@@ -75,6 +75,10 @@
                                     <div class="sb-nav-link-icon"><i class="fas fa-graduation-cap"></i></div>
                                     Alumnos/as
                                 </a>
+                                <a class="nav-link" asp-area="" asp-controller="CourseAssignment" asp-action="Index">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-folder-open"></i></div>
+                                    Asignación De Curso
+                                </a>
                                 <!-- Seccion Seguridad-->
                                 <div class="sb-sidenav-menu-heading">Seguridad</div>
                                 <a class="nav-link" asp-area="" asp-controller="Role" asp-action="Index">
@@ -136,6 +140,10 @@
                                     <div class="sb-nav-link-icon"><i class="fas fa-graduation-cap"></i></div>
                                     Alumnos/as
                                 </a>
+                                <a class="nav-link" asp-area="" asp-controller="CourseAssignment" asp-action="Index">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-folder-open"></i></div>
+                                    Asignación De Curso
+                                </a>
                                 <!-- Seccion Seguridad-->
                                 <div class="sb-sidenav-menu-heading">Seguridad</div>
                                 <a class="nav-link" asp-area="" asp-controller="User" asp-action="Index">
@@ -192,6 +200,10 @@
                                 <a class="nav-link" asp-area="" asp-controller="Student" asp-action="Index">
                                     <div class="sb-nav-link-icon"><i class="fas fa-graduation-cap"></i></div>
                                     Alumnos/as
+                                </a>
+                                <a class="nav-link" asp-area="" asp-controller="CourseAssignment" asp-action="Index">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-folder-open"></i></div>
+                                    Asignación De Curso
                                 </a>
                                 <!-- Seccion Seguridad-->
                                 <div class="sb-sidenav-menu-heading">Seguridad</div>
