--- a/KM.SysControlAdmin.WebApp/Views/User/Information.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/User/Information.cshtml
@@ -14,3 +14,29 @@
         <p>@Model.Role!.Name</p>
     </div>
 </div>
+
+@section Scripts {
+    <script>
+        const Toast = Swal.mixin({
+            toast: true,
+            position: "top-end",
+            showConfirmButton: false,
+            timer: 8000,
+            timerProgressBar: true,
+            didOpen: (toast) => {
+                toast.addEventListener('mouseenter', Swal.stopTimer);
+                toast.addEventListener('mouseleave', Swal.resumeTimer);
+            }
+        });
+
+        const alertMessage = '@ViewBag.AlertMessage';
+
+        if (alertMessage) {
+            Toast.fire({
+                icon: "success",
+                title: "¡Modificado Exitosamente!",
+                text: alertMessage
+            });
+        }
+    </script>
+}
