NAVEGABILIDAD ENTRE _LAYOUT Y UPDATEINFOUSER

--- a/KM.SysControlAdmin.WebApp/Views/Shared/_Layout.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/Shared/_Layout.cshtml
@@ -244,6 +244,16 @@
                                     <div class="sb-nav-link-icon"><i class="fas fa-home"></i></div>
                                     Inicio
                                 </a>
+                                <!-- Seccion Actualizar Información-->
+                                <div class="sb-sidenav-menu-heading">Actualizar Perfil</div>
+                                <a class="nav-link" asp-area="" asp-controller="User" asp-action="UpdateInfoUser">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-user-edit"></i></div>
+                                    Actualizar Mi Información
+                                </a>
+                                <a class="nav-link" asp-area="" asp-controller="User" asp-action="UpdatePictureUser">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-camera"></i></div>
+                                    Actualizar Fotografia
+                                </a>
                                 <!-- Seccion Seguridad-->
                                 <div class="sb-sidenav-menu-heading">Seguridad</div>
                                 <a class="nav-link" asp-area="" asp-controller="User" asp-action="ChangePassword">
@@ -260,7 +270,6 @@
                                 <div class="collapse" id="collapseInfo" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                     <nav class="sb-sidenav-menu-nested nav">
                                         <a class="nav-link" asp-area="" asp-controller="User" asp-action="Information">Mi Perfil</a>
-                                        <a class="nav-link" asp-area="" asp-controller="User" asp-action="UpdatePictureUser">Actualizar Fotografia</a>
                                     </nav>
                                 </div>
                             }
@@ -272,6 +281,16 @@
                                     <div class="sb-nav-link-icon"><i class="fas fa-home"></i></div>
                                     Inicio
                                 </a>
+                                <!-- Seccion Actualizar Información-->
+                                <div class="sb-sidenav-menu-heading">Actualizar Perfil</div>
+                                <a class="nav-link" asp-area="" asp-controller="User" asp-action="UpdateInfoUser">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-user-edit"></i></div>
+                                    Actualizar Mi Información
+                                </a>
+                                <a class="nav-link" asp-area="" asp-controller="User" asp-action="UpdatePictureUser">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-camera"></i></div>
+                                    Actualizar Fotografia
+                                </a>
                                 <!-- Seccion Seguridad-->
                                 <div class="sb-sidenav-menu-heading">Seguridad</div>
                                 <a class="nav-link" asp-area="" asp-controller="User" asp-action="ChangePassword">
@@ -288,7 +307,6 @@
                                 <div class="collapse" id="collapseInfo" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                                     <nav class="sb-sidenav-menu-nested nav">
                                         <a class="nav-link" asp-area="" asp-controller="User" asp-action="Information">Mi Perfil</a>
-                                        <a class="nav-link" asp-area="" asp-controller="User" asp-action="UpdatePictureUser">Actualizar Fotografia</a>
                                     </nav>
                                 </div>
                             }
