--- a/KM.SysControlAdmin.WebApp/Views/Shared/_Layout.cshtml
+++ b/KM.SysControlAdmin.WebApp/Views/Shared/_Layout.cshtml
@@ -244,6 +244,12 @@
                                     <div class="sb-nav-link-icon"><i class="fas fa-home"></i></div>
                                     Inicio
                                 </a>
+                                <!-- Seccion Cursos-->
+                                <div class="sb-sidenav-menu-heading">Mis Cursos</div>
+                                <a class="nav-link" asp-area="" asp-controller="Trainer" asp-action="MyAssignedCourses">
+                                    <div class="sb-nav-link-icon"><i class="fas fa-chalkboard"></i></div>
+                                    Mis Cursos Asignados
+                                </a>
                                 <!-- Seccion Actualizar Información-->
                                 <div class="sb-sidenav-menu-heading">Actualizar Perfil</div>
                                 <a class="nav-link" asp-area="" asp-controller="User" asp-action="UpdateInfoUser">
